syntax = "proto3";
package expert;

service Expert {
    rpc LoginExpert(LoginExpertRequest) returns (LoginExpertResponse);
    rpc ExpertSignupOtp(ExpertSignupOtpRequest) returns (ExpertSignupOtpResponse);
    rpc ExpertResendOtp(ExpertSignupOtpRequest) returns (ExpertSignupOtpResponse);
    rpc RegisterExpert(RegisterExpertRequest) returns (RegisterExpertResponse);
    rpc GoogleLoginExpert(GoogleLoginExpertRequest) returns (GoogleLoginExpertResponse);
}
message LoginExpertRequest {
    string email = 1;
    string password = 2;
}

message LoginExpertResponse {
    string message = 1;
    string name = 2;
    string token = 3;
    string _id = 4;
    string refreshToken = 5;
    string image = 6;
}

message RegisterExpertRequest {
    string name = 1;
    string email = 2;
    string mobile = 3;
    string password = 4;
    string expertImage = 5;
    string otp = 6;
}

message RegisterExpertResponse {
    string message = 1;
    string name = 2;
    string token = 3;
    string _id = 4;
    string refreshToken = 5;
    string image = 6;
}

message GoogleLoginExpertRequest {
    string email = 1;
}

message GoogleLoginExpertResponse {
    string message = 1;
    string name = 2;
    string token = 3;
    string _id = 4;
    string refreshToken = 5;
    string image = 6;
}

message ExpertSignupOtpRequest {
    string email = 1;
    string name = 2;
}

message ExpertSignupOtpResponse {
    string message = 1;
}